[gd_scene load_steps=5 format=3 uid="uid://y0c2i7cobaf2"]

[ext_resource type="PackedScene" uid="uid://biqf2y3w81huo" path="res://models/objects/interactive_door/hello_neighbor_reality_door_download.glb" id="1_door"]
[ext_resource type="Script" uid="uid://c73mi36ajpgu0" path="res://models/objects/interactive_door/interactive_door.gd" id="2_script"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cg8g3"]
data = PackedVector3Array(-4.5522, -0.21959999, 0.0013, -4.5522, 0.21959999, 20.771, -4.5522, -0.21959999, 20.771, -4.5522, -0.21959999, 0.0013, -4.5522, 0.21959999, 0.0013, -4.5522, 0.21959999, 20.771, 4.5522, 0.21959999, 20.771, -4.5522, -0.21959999, 20.771, -4.5522, 0.21959999, 20.771, 4.5522, 0.21959999, 20.771, 4.5522, -0.21959999, 20.771, -4.5522, -0.21959999, 20.771, 4.5522, 0.21959999, 0.0013, 4.5522, -0.21959999, 20.771, 4.5522, 0.21959999, 20.771, 4.5522, 0.21959999, 0.0013, 4.5522, -0.21959999, 0.0013, 4.5522, -0.21959999, 20.771, -4.5522, 0.21959999, 0.0013, 4.5522, -0.21959999, 0.0013, 4.5522, 0.21959999, 0.0013, -4.5522, 0.21959999, 0.0013, -4.5522, -0.21959999, 0.0013, 4.5522, -0.21959999, 0.0013, -4.5522, 0.21959999, 0.0013, 4.5522, 0.21959999, 20.771, -4.5522, 0.21959999, 20.771, -4.5522, 0.21959999, 0.0013, 4.5522, 0.21959999, 0.0013, 4.5522, 0.21959999, 20.771, 4.5522, -0.21959999, 0.0013, -4.5522, -0.21959999, 20.771, 4.5522, -0.21959999, 20.771, 4.5522, -0.21959999, 0.0013, -4.5522, -0.21959999, 0.0013, -4.5522, -0.21959999, 20.771)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2cftf"]
data = PackedVector3Array(-4.6275997, 0.80969995, 20.8788, -5.4214997, 0.80969995, -0.6225, -4.6275997, 0.80969995, -0.6225, -4.6275997, 0.80969995, 20.8788, -5.4214997, 0.80969995, 21.694, -5.4214997, 0.80969995, -0.6225, 4.6275, 0.80969995, 20.8788, -5.4214997, 0.80969995, 21.694, -4.6275997, 0.80969995, 20.8788, 4.6275, 0.80969995, 20.8788, 5.4214997, 0.80969995, 21.694, -5.4214997, 0.80969995, 21.694, 4.6275, 0.80969995, -0.6225, 5.4214997, 0.80969995, 21.694, 4.6275, 0.80969995, 20.8788, 4.6275, 0.80969995, -0.6225, 5.4214997, 0.80969995, -0.6225, 5.4214997, 0.80969995, 21.694, 4.6275, -0.80969995, 20.8788, 5.4214997, -0.80969995, -0.6225, 4.6275, -0.80969995, -0.6225, 4.6275, -0.80969995, 20.8788, 5.4214997, -0.80969995, 21.694, 5.4214997, -0.80969995, -0.6225, -4.6275997, -0.80969995, 20.8788, 5.4214997, -0.80969995, 21.694, 4.6275, -0.80969995, 20.8788, -4.6275997, -0.80969995, 20.8788, -5.4214997, -0.80969995, 21.694, 5.4214997, -0.80969995, 21.694, -4.6275997, -0.80969995, -0.6225, -5.4214997, -0.80969995, 21.694, -4.6275997, -0.80969995, 20.8788, -4.6275997, -0.80969995, -0.6225, -5.4214997, -0.80969995, -0.6225, -5.4214997, -0.80969995, 21.694, 5.4214997, 0.80969995, 21.694, -5.4214997, -0.80969995, 21.694, -5.4214997, 0.80969995, 21.694, -5.4214997, -0.80969995, -0.6225, -5.4214997, 0.80969995, 21.694, -5.4214997, -0.80969995, 21.694, -5.4214997, -0.80969995, -0.6225, -5.4214997, 0.80969995, -0.6225, -5.4214997, 0.80969995, 21.694, 5.4214997, 0.80969995, 21.694, 5.4214997, -0.80969995, 21.694, -5.4214997, -0.80969995, 21.694, 5.4214997, 0.80969995, -0.6225, 5.4214997, -0.80969995, 21.694, 5.4214997, 0.80969995, 21.694, 5.4214997, 0.80969995, -0.6225, 5.4214997, -0.80969995, -0.6225, 5.4214997, -0.80969995, 21.694, -4.6275997, 0.80969995, 20.8788, 4.6275, -0.80969995, 20.8788, 4.6275, 0.80969995, 20.8788, -4.6275997, 0.80969995, 20.8788, -4.6275997, -0.80969995, 20.8788, 4.6275, -0.80969995, 20.8788, -4.6275997, 0.80969995, -0.6225, -4.6275997, -0.80969995, 20.8788, -4.6275997, 0.80969995, 20.8788, -4.6275997, 0.80969995, -0.6225, -4.6275997, -0.80969995, -0.6225, -4.6275997, -0.80969995, 20.8788, 4.6275, 0.80969995, 20.8788, 4.6275, -0.80969995, -0.6225, 4.6275, 0.80969995, -0.6225, 4.6275, 0.80969995, 20.8788, 4.6275, -0.80969995, 20.8788, 4.6275, -0.80969995, -0.6225, -4.4716, 0.141, 18.6518, -4.2893, 0.32349998, 19.957699, -4.2893, 0.32349998, 18.6518, -4.4716, 0.141, 18.6518, -4.4716, 0.141, 19.957699, -4.2893, 0.32349998, 19.957699, -4.2893, 0.32349998, 18.6518, -4.2893, 0.32349998, 19.957699, -4.4716, 0.50589997, 19.957699, -4.2893, 0.32349998, 18.6518, -4.4716, 0.50589997, 19.957699, -4.4716, 0.50589997, 18.6518, -4.4716, 0.50589997, 18.6518, -4.4716, 0.50589997, 19.957699, -4.6541, 0.32349998, 19.957699, -4.4716, 0.50589997, 18.6518, -4.6541, 0.32349998, 19.957699, -4.6541, 0.32349998, 18.6518, -4.6541, 0.32349998, 18.6518, -4.6541, 0.32349998, 19.957699, -4.4716, 0.141, 19.957699, -4.6541, 0.32349998, 18.6518, -4.4716, 0.141, 19.957699, -4.4716, 0.141, 18.6518, -4.6541, 0.32349998, 19.957699, -4.2893, 0.32349998, 19.957699, -4.4716, 0.141, 19.957699, -4.6541, 0.32349998, 19.957699, -4.4716, 0.50589997, 19.957699, -4.2893, 0.32349998, 19.957699, -4.6541, 0.32349998, 18.6518, -4.2893, 0.32349998, 18.6518, -4.4716, 0.50589997, 18.6518, -4.6541, 0.32349998, 18.6518, -4.4716, 0.141, 18.6518, -4.2893, 0.32349998, 18.6518, -4.4716, 0.141, 9.5883, -4.2893, 0.32349998, 10.894199, -4.2893, 0.32349998, 9.5883, -4.4716, 0.141, 9.5883, -4.4716, 0.141, 10.894199, -4.2893, 0.32349998, 10.894199, -4.2893, 0.32349998, 9.5883, -4.2893, 0.32349998, 10.894199, -4.4716, 0.50589997, 10.894199, -4.2893, 0.32349998, 9.5883, -4.4716, 0.50589997, 10.894199, -4.4716, 0.50589997, 9.5883, -4.4716, 0.50589997, 9.5883, -4.4716, 0.50589997, 10.894199, -4.6541, 0.32349998, 10.894199, -4.4716, 0.50589997, 9.5883, -4.6541, 0.32349998, 10.894199, -4.6541, 0.32349998, 9.5883, -4.6541, 0.32349998, 9.5883, -4.6541, 0.32349998, 10.894199, -4.4716, 0.141, 10.894199, -4.6541, 0.32349998, 9.5883, -4.4716, 0.141, 10.894199, -4.4716, 0.141, 9.5883, -4.6541, 0.32349998, 10.894199, -4.2893, 0.32349998, 10.894199, -4.4716, 0.141, 10.894199, -4.6541, 0.32349998, 10.894199, -4.4716, 0.50589997, 10.894199, -4.2893, 0.32349998, 10.894199, -4.6541, 0.32349998, 9.5883, -4.2893, 0.32349998, 9.5883, -4.4716, 0.50589997, 9.5883, -4.6541, 0.32349998, 9.5883, -4.4716, 0.141, 9.5883, -4.2893, 0.32349998, 9.5883, -4.4716, 0.141, 0.6893, -4.2893, 0.32349998, 1.9955, -4.2893, 0.32349998, 0.6893, -4.4716, 0.141, 0.6893, -4.4716, 0.141, 1.9955, -4.2893, 0.32349998, 1.9955, -4.2893, 0.32349998, 0.6893, -4.2893, 0.32349998, 1.9955, -4.4716, 0.50589997, 1.9955, -4.2893, 0.32349998, 0.6893, -4.4716, 0.50589997, 1.9955, -4.4716, 0.50589997, 0.6893, -4.4716, 0.50589997, 0.6893, -4.4716, 0.50589997, 1.9955, -4.6541, 0.32349998, 1.9955, -4.4716, 0.50589997, 0.6893, -4.6541, 0.32349998, 1.9955, -4.6541, 0.32349998, 0.6893, -4.6541, 0.32349998, 0.6893, -4.6541, 0.32349998, 1.9955, -4.4716, 0.141, 1.9955, -4.6541, 0.32349998, 0.6893, -4.4716, 0.141, 1.9955, -4.4716, 0.141, 0.6893, -4.6541, 0.32349998, 1.9955, -4.2893, 0.32349998, 1.9955, -4.4716, 0.141, 1.9955, -4.6541, 0.32349998, 1.9955, -4.4716, 0.50589997, 1.9955, -4.2893, 0.32349998, 1.9955, -4.6541, 0.32349998, 0.6893, -4.2893, 0.32349998, 0.6893, -4.4716, 0.50589997, 0.6893, -4.6541, 0.32349998, 0.6893, -4.4716, 0.141, 0.6893, -4.2893, 0.32349998, 0.6893)

[node name="InteractiveDoor" type="Node3D"]
script = ExtResource("2_script")

[node name="DoorModel" parent="." instance=ExtResource("1_door")]
transform = Transform3D(1, 0, 0, 0, 0.87700605, 0, 0, 0, 1, 0, 0.076827765, 0)

[node name="Skeleton3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/Door_Rig/Object_5" index="0"]
bones/2/rotation = Quaternion(-0.49437696, -0.49437445, -0.5055624, 0.5055611)
bones/3/rotation = Quaternion(-0.011183631, -0.00020940392, 0.9997624, 0.018710684)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/Door_Rig/Object_5/Skeleton3D" index="2"]
transform = Transform3D(-2.6986902e-07, 1.0000001, 3.784651e-06, 0.022370808, 3.8146964e-06, -0.9997495, -0.99974984, -1.2119312e-07, -0.022370722, -4.291037, -7.1525574e-07, 9.976454)
bone_name = "Door_01"
bone_idx = 2

[node name="DoorCollider" type="StaticBody3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/Door_Rig/Object_5/Skeleton3D/BoneAttachment3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/Door_Rig/Object_5/Skeleton3D/BoneAttachment3D/DoorCollider"]
transform = Transform3D(-6.519258e-09, 4.6333298e-08, -1.0000001, 1.0000004, 5.9604645e-08, -2.7939677e-09, -2.9802322e-08, -0.9999996, -4.8661605e-08, 10.209933, 3.9063478, -0.095638275)
shape = SubResource("ConcavePolygonShape3D_cg8g3")

[node name="FrameCollider" type="StaticBody3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/STM_Frame" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorModel/Sketchfab_model/c9c6a8e6d16b46848368e6d4ce03f3aa_fbx/Object_2/RootNode/STM_Frame/FrameCollider"]
shape = SubResource("ConcavePolygonShape3D_2cftf")

[editable path="DoorModel"]
